--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,239 +10,247 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_weight="1.5">
+        android:orientation="horizontal"
+        android:background="@drawable/layout_rounded">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingTop="120dp"
-            android:paddingBottom="30dp"
             android:orientation="vertical"
-            android:layout_weight="1">
-
-            <ImageView
-                android:id="@+id/animal_image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/animal_rabbit"
-                android:layout_weight="1"/>
-
-            <TextView
-                android:id="@+id/animal_text"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:layout_weight="3"
-                android:text="동물"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingTop="30dp"
-            android:paddingBottom="120dp"
-            android:orientation="vertical"
-            android:layout_weight="1">
-
-            <ImageView
-                android:id="@+id/job_image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/job_artist"
-                android:layout_weight="1"/>
-
-            <TextView
-                android:id="@+id/job_text"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:layout_weight="3"
-                android:text="직업"/>
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_weight="1">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_weight="1"
-            android:paddingTop="50dp">
+            android:layout_weight="1.5">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:paddingTop="120dp"
+                android:paddingBottom="30dp"
                 android:orientation="vertical"
                 android:layout_weight="1">
 
                 <ImageView
-                    android:id="@+id/body_image"
+                    android:id="@+id/animal_image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/body_mouth"
+                    android:src="@drawable/animal_rabbit"
                     android:layout_weight="1"/>
 
                 <TextView
-                    android:id="@+id/body_text"
+                    android:id="@+id/animal_text"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="3"
                     android:gravity="center"
-                    android:text="신체" />
+                    android:layout_weight="3"
+                    android:text="동물"/>
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:paddingTop="30dp"
+                android:paddingBottom="120dp"
                 android:orientation="vertical"
                 android:layout_weight="1">
 
                 <ImageView
-                    android:id="@+id/objects_image"
+                    android:id="@+id/job_image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/objects_balloon"
+                    android:src="@drawable/job_artist"
                     android:layout_weight="1"/>
 
                 <TextView
-                    android:id="@+id/objects_text"
+                    android:id="@+id/job_text"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="3"
                     android:gravity="center"
-                    android:text="사물" />
+                    android:layout_weight="3"
+                    android:text="직업"/>
 
             </LinearLayout>
 
         </LinearLayout>
 
-        <ImageView
-            android:padding="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/main_image"
-            android:layout_weight="1"/>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_weight="1"
-            android:paddingBottom="50dp">
+            android:orientation="vertical"
+            android:layout_weight="1">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_weight="1"
+                android:paddingTop="50dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:layout_weight="1">
+
+                    <ImageView
+                        android:id="@+id/body_image"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/body_mouth"
+                        android:layout_weight="1"/>
+
+                    <TextView
+                        android:id="@+id/body_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="3"
+                        android:gravity="center"
+                        android:text="신체" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:layout_weight="1">
+
+                    <ImageView
+                        android:id="@+id/objects_image"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/objects_balloon"
+                        android:layout_weight="1"/>
+
+                    <TextView
+                        android:id="@+id/objects_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="3"
+                        android:gravity="center"
+                        android:text="사물" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <ImageView
+                android:padding="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/main_image"
+                android:layout_weight="1"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_weight="1"
+                android:paddingBottom="50dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:layout_weight="1">
+
+                    <ImageView
+                        android:id="@+id/color_image"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/color_yellow"
+                        android:layout_weight="1"/>
+
+                    <TextView
+                        android:id="@+id/color_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="3"
+                        android:gravity="center"
+                        android:text="색깔" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:layout_weight="1">
+
+                    <ImageView
+                        android:id="@+id/vehicle_image"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/vehicle_spaceship"
+                        android:layout_weight="1"/>
+
+                    <TextView
+                        android:id="@+id/vehicle_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="3"
+                        android:gravity="center"
+                        android:text="탈것" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="1.5">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingTop="120dp"
+                android:paddingBottom="30dp"
                 android:orientation="vertical"
                 android:layout_weight="1">
 
                 <ImageView
-                    android:id="@+id/color_image"
+                    android:id="@+id/plant_image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/color_yellow"
+                    android:src="@drawable/plant_strawberry"
                     android:layout_weight="1"/>
 
                 <TextView
-                    android:id="@+id/color_text"
+                    android:id="@+id/plant_text"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="3"
                     android:gravity="center"
-                    android:text="색깔" />
+                    android:layout_weight="3"
+                    android:text="식물"/>
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:paddingTop="30dp"
+                android:paddingBottom="120dp"
                 android:orientation="vertical"
                 android:layout_weight="1">
 
                 <ImageView
-                    android:id="@+id/vehicle_image"
+                    android:id="@+id/number_image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/vehicle_spaceship"
+                    android:src="@drawable/number_hundred"
                     android:layout_weight="1"/>
 
                 <TextView
-                    android:id="@+id/vehicle_text"
+                    android:id="@+id/number_text"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="3"
                     android:gravity="center"
-                    android:text="탈것" />
+                    android:layout_weight="3"
+                    android:text="숫자"/>
 
             </LinearLayout>
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_weight="1.5">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingTop="120dp"
-            android:paddingBottom="30dp"
-            android:orientation="vertical"
-            android:layout_weight="1">
-
-            <ImageView
-                android:id="@+id/plant_image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/plant_strawberry"
-                android:layout_weight="1"/>
-
-            <TextView
-                android:id="@+id/plant_text"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:layout_weight="3"
-                android:text="식물"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingTop="30dp"
-            android:paddingBottom="120dp"
-            android:orientation="vertical"
-            android:layout_weight="1">
-
-            <ImageView
-                android:id="@+id/number_image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/number_hundred"
-                android:layout_weight="1"/>
-
-            <TextView
-                android:id="@+id/number_text"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:layout_weight="3"
-                android:text="숫자"/>
 
         </LinearLayout>
 
