--- a/app/src/main/res/layout/fragment_objects.xml
+++ b/app/src/main/res/layout/fragment_objects.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/objectsfragment_korean"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="bottom"
+                android:gravity="center|bottom"
                 android:textSize="40dp"
                 android:layout_weight="1"
                 android:text="korean"/>
@@ -39,6 +39,7 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/objectsfragment_home_btn"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_gravity="right"
