--- a/app/src/main/res/layout/activity_qr.xml
+++ b/app/src/main/res/layout/activity_qr.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="10dp"
     android:orientation="vertical"
-    tools:context=".Body.BodyFragment">
+    android:background="@color/customBackgroundColor"
+    tools:context=".QRActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,7 +18,7 @@
         android:weightSum="1">
 
         <ImageView
-            android:id="@+id/bodyfragment_home_btn"
+            android:id="@+id/qr_home_btn"
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_gravity="right"
@@ -24,11 +27,11 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.4"
+            android:layout_weight="0.35"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/bodyfragment_korean"
+                android:id="@+id/qr_korean"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="korean"
@@ -39,7 +42,7 @@
                 android:textStyle="italic" />
 
             <TextView
-                android:id="@+id/bodyfragment_vietnamese"
+                android:id="@+id/qr_vietnamese"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/notosans"
@@ -52,7 +55,7 @@
         </LinearLayout>
 
         <ImageView
-            android:id="@+id/bodyfragment_image"
+            android:id="@+id/qr_image"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.5"
@@ -61,10 +64,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.1">
+            android:layout_weight="0.15">
 
             <TextView
-                android:id="@+id/bodyfragment_english"
+                android:id="@+id/qr_english"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/notosans"
