--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
 
     <color name="customBackgroundColor">#5abdcd</color>
+    <color name="customWhite">#ffffff</color>
 </resources>
